[project]
name = "flightsasl"
version = "0.1.0"
description = "FlightsASL FastAPI service"
authors = [
  { name = "Alba Segura", email = "m1ss.sunrse@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.110.0,<0.111.0",
  "uvicorn[standard]>=0.29.0,<0.30.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.6.8", python = ">=3.7" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
